push code login and register dolong

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
         android:textStyle="bold"
         android:textSize="25dp"
         android:textColor="@color/white"
-        android:text="My Project Do Hoang Long"
+        android:text="My Project N1"
         />
 
     <TextView
