--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="My Project Do Hoang Long"
+        android:text="My Project N1"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold" />
