--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,7 +66,7 @@
         android:textSize="20dp"
         android:text="Đăng Ký"
         android:layout_marginTop="20dp"
-        android:background="#4575CF"
+        android:background="@drawable/brown_bg"
         android:textColor="#FFFFFF"/>
 
     <LinearLayout
