--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -189,7 +189,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button2"
+                android:id="@+id/payButton"
                 android:background="@drawable/brown_bg"
                 style="@android:style/Widget.Button"
                 android:textColor="@color/white"
