--- a/app/src/main/res/layout/viewholder_best_seller.xml
+++ b/app/src/main/res/layout/viewholder_best_seller.xml
@@ -18,13 +18,13 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="6dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/btn_3" />
+        app:srcCompat="@drawable/cake" />
 
     <TextView
         android:id="@+id/priceTxt"
