--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.OrderHistoryActivity"
-    android:orientation="vertical"
-    android:background="#D1C3C3">
+    android:orientation="vertical">
     <ImageView
         android:id="@+id/backhistory"
         android:layout_width="wrap_content"
