--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- item_order.xml -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@drawable/brown_bg"
+    android:background="@drawable/brown_bg_2"
     android:layout_marginTop="10dp"
-    android:layout_margin="10dp"
->
+    android:layout_margin="10dp">
 
     <TextView
         android:id="@+id/orderDate"
@@ -16,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="Order Date : "
         android:textStyle="bold"
-        android:textSize="22dp"
+        android:textSize="20dp"
         android:layout_marginTop="0dp"
         android:layout_marginStart="25dp"
         android:textColor="@color/white"/>
@@ -27,8 +26,24 @@
         android:layout_height="wrap_content"
         android:text="Total Amount :"
         android:textStyle="bold"
-        android:textSize="22dp"
+        android:textSize="20dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="25dp"
         android:textColor="@color/white"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Purchased products include"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewProductList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 </LinearLayout>
