--- a/app/src/main/res/drawable/grey2.xml
+++ b/app/src/main/res/drawable/grey2.xml
@@ -2,9 +2,11 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#E1E7DE" /> <!-- Xanh lá nhạt -->
+            <!-- Nền màu nâu ấm áp -->
+            <solid android:color="#C3A995" /> <!-- Nâu -->
             <corners android:radius="20dp" />
-            <stroke android:width="2dp" android:color="#73D39E"/> <!-- Viền xanh lá đậm -->
+            <!-- Viền màu vàng đậm -->
+            <stroke android:width="5dp" android:color="#B4761D"/> <!-- Vàng đậm -->
         </shape>
     </item>
 </layer-list>
