--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,7 +15,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="380dp"
-            android:background="#A9BCC7"
+            android:background="@drawable/grey3"
             android:layout_marginBottom="-75dp" />
 
         <!-- Profile Image -->
@@ -51,7 +51,7 @@
 
         <!-- Menu Options -->
         <LinearLayout
-            android:layout_width="360dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
@@ -64,7 +64,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/grey_bg2"
+                android:background="@drawable/brown_profile"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:padding="18dp"
@@ -76,13 +76,14 @@
                     android:layout_marginEnd="8dp"
                     android:src="@drawable/exchange"
                     android:layout_marginStart="7dp"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center"
+                    />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="RePass"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_gravity="center"
@@ -95,7 +96,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/grey_bg2"
+                android:background="@drawable/brown_profile"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:padding="18dp"
@@ -114,7 +115,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Logout"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_gravity="center"
@@ -126,7 +127,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/grey_bg2"
+                android:background="@drawable/brown_profile"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:padding="18dp"
@@ -145,7 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Info"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_gravity="center"
