--- a/app/src/main/res/layout/viewholder_best_seller.xml
+++ b/app/src/main/res/layout/viewholder_best_seller.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="215dp"
-    android:layout_margin="8dp">
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="20dp">
+
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/picBestSeller"
@@ -25,6 +27,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cake" />
+
+    <ImageView
+        android:id="@+id/deleteBtn"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/deletee" />
 
     <TextView
         android:id="@+id/priceTxt"
